OCaml/mini-c/tests/typing/bad/testfile-redef-5.c

int f() {}
int f(int x) {}
int main() {}
